# tmp

aya/: Cargo.toml  README.md
aya/aya/: Cargo.toml  build.rs
aya/aya-common/: Cargo.toml
aya/aya-ebpf/: Cargo.toml
aya/aya-ebpf/src/: main.rs
aya/aya/src/: main.rs
cat/: bigger.go  go.mod  large.txt  main.go  main_test.go
cat/testdata/in/: sample.txt
cfg/: Cargo.toml
cfg/src/: main.rs
cfg/test/: index.js
downloader/: README.md  TODO.md  config.go  download.go  event.go  go.mod  go.sum  justfile  main.go  main_test.go  notify.go  print.go  progress.go  result.go  save.go
downloader/internal/backoff/: backoff.go  backoff_test.go  retry.go
downloader/internal/pubsub/: pubsub.go
fetch/: cli.go  go.mod  main.go  progress.go
kaleidoscope/: .clang-format  .gitignore  3  CMakeLists.txt  TODO.md  compile_commands.json
kaleidoscope/.cache/clangd/index/: main.cpp.F9473073DE934DD1.idx
kaleidoscope/src/: main.cpp
md_translate/: CLAUDE.md  Cargo.toml  test.md
md_translate/.claude/commands/: manage_article_workflow.md  plan_article.md  research_article.md  review_article.md  write_article.md
md_translate/src/: error.rs  lib.rs  main.rs
md_translate/src/cli/: commands.rs  mod.rs
md_translate/src/markdown/: mod.rs  parser.rs  renderer.rs
md_translate/src/server/: mod.rs
md_translate/src/translator/: cache.rs  cache_backend.rs  mod.rs  ollama.rs  translation_service.rs
md_translate/tests/: cache_unit_test.rs  cli_commands_test.rs  debug_parser.rs  error_test.rs  markdown_renderer_test.rs  segment_ordering_test.rs  segment_ordering_unit_test.rs  translator_unit_test.rs
md_translate/tests/mocks/: mock_cache.rs  mock_translation_service.rs  mod.rs
md_translate/thoughts/shared/plans/: 2025-09-30-implement-test-strategy.md
md_translate/thoughts/shared/research/: 2025-09-30-md-translate-architecture.md
permutation/: combination.go  combination_test.go  go.mod  main.go  main_test.go
slowserver/: go.mod  main.go
todo_app/src/: main.rs
workerpool/: go.mod  main.go
